@@ -1,7 +1,7 @@
 <tool id="vl_tools_markers_to_fastq" name="VLT.markers_to_fastq">
   <description>converter</description>
   <command interpreter="python">
-    markers_to_fastq.py --logfile ${log_file} masks_to_fastq
+    markers_to_fastq.py --logfile ${log_file} markers_to_fastq
     -i ${input_file} -o ${output_file}
   </command>
   <inputs>
@@ -9,7 +9,7 @@
 	   label="VL marker definitions file" />
   </inputs>
   <outputs>
-    <data name="output_file" format="fastq" />
+    <data name="output_file" format="fastqsanger" />
     <data format="txt" name="log_file" label="${tool.name}.log_file"/>
   </outputs>
   <help>
