@@ -1,3 +1,9 @@
+2011-09-14    <simleo@neuron.crs4.it>
+
+	* bl/vl/app/snp_reannotator/markers_to_fastq.py: renamed from
+	masks_to_fastq.py; quality string char set to '~', the maximum for
+	all fastq subformats.
+
 2011-09-12    <simleo@neuron.crs4.it>
 
 	* bl/vl/app/snp_reannotator/convert_dbsnp.py: changed to output a
